chore: switch to react + vite

--- a/index.html
+++ b/index.html
@@ -1,31 +1,13 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-
-    <title>malyvsen</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.png">
-
-</head>
-
-<body>
-
-    <div class="outerContainer">
-        <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
-        <div id="story" class="container">
-            <div class="header">
-                <h1>malyvsen</h1>
-                <h2 class="byline"></h2>
-            </div>
-        </div>
-    </div>
-
-    <script src="ink.js"></script>
-    <script src="home.js"></script>
-    <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
